--- a/gui/conf/metakr.org
+++ b/gui/conf/metakr.org
@@ -252,7 +252,8 @@ For quick iteration all colors are stored in a table.
    :inherit fixed-pitch)
   (org-table
    :inherit fixed-pitch
-   :background @org-table)
+   :background @org-table
+   :height 0.9)
   (org-formula
    :inherit org-table
    :height 1)
@@ -300,7 +301,8 @@ For quick iteration all colors are stored in a table.
    :background @org-block-line)
   (org-block
    :background @org-block-bg
-   :inherit fixed-pitch)
+   :inherit fixed-pitch
+   :height 0.9)
   (org-priority
    :inherit fixed-pitch
    :weight normal)
