--- a/gui/conf/metakr.org
+++ b/gui/conf/metakr.org
@@ -235,9 +235,10 @@ For quick iteration all colors are stored in a table.
    :inherit error)
 
 ;; Org
-  (org-level-1 :inherit default :foreground @header)
-  (org-level-2 :inherit default :foreground @header)
-  (org-level-3 :inherit default :foreground @header)
+  (org-level-1 :inherit default :foreground @header :weight regular :height 1.4)
+  (org-level-2 :inherit default :foreground @header :weight regular :height 1.3)
+  (org-level-3 :inherit default :foreground @header :weight regular :height 1.1)
+  (org-level-4 :inherit default :foreground @header :weight regular :height 1.0)
   (org-meta-line
    :inherit fixed-pitch
    :foreground @org-meta)
@@ -278,7 +279,7 @@ For quick iteration all colors are stored in a table.
   (org-document-title
    :inherit default
    :foreground @org-title
-   :height 1.8
+   :height 2.0
    :underline (:color @org-title-underline))
   (org-checkbox
    :inherit fixed-pitch
