--- a/gui/conf/metakr.org
+++ b/gui/conf/metakr.org
@@ -256,10 +256,13 @@ For quick iteration all colors are stored in a table.
    :inherit fixed-pitch)
   (org-code
    :inherit fixed-pitch)
+  (org-link
+   :foreground @link
+   :underline t
+   :inherit fixed-pitch)
   (org-table
    :inherit fixed-pitch
-   :background @org-table
-   :height 0.9)
+   :background @org-table)
   (org-formula
    :inherit org-table
    :height 1)
